--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ main{
     background-color: var(--White);   
     border-radius: 20px;
     color: var(--Wenge-Brown);
+    margin:  100px 0;
 }
 .content{
     padding: 35px;
